tests/semantic_cases/invalid/duplicate_type_decl.ob0
MODULE Main;
TYPE Count = INTEGER;
TYPE Count = INTEGER;
BEGIN
END Main.
